# Healthy-agent-for-world-

./: .gitignore  README.md  pyproject.toml
cases/: abd_001.json  chest_pain_001.json  resp_001.json  stroke_001.json  uti_001.json  variants.json
medical_world_agent/: __init__.py  api.py  audit.py  case_loader.py  cli.py  eval.py  knowledge.py  models.py  orchestrator.py  pathways.py  sanitizer.py  subagents.py  tools.py  validators.py  world_model.py
reports/: replay_episodes.csv  replay_metrics.json  stress_sessions_report.json  verify_output.txt
scripts/: eval_replay.py  quality_gate.py  stress_sessions.py  verify.py
static/: dashboard.html
tests/: test_api.py  test_audit.py  test_case_loader.py  test_eval.py  test_input_validation.py  test_knowledge.py  test_knowledge_upgrade.py  test_orchestrator.py  test_sanitizer.py  test_session_cleanup.py  test_world_model.py
